# sineshaper-dssi

./: .gitignore  ChangeLog  Makefile.am  Makefile.in  NEWS  aclocal.m4  configure  configure.ac
src/: Makefile.am  Makefile.in
src/common/: Makefile.am  Makefile.in  dssi_shm.c  dssi_shm.h  dssiplugin.cpp  dssiuiclient.cpp  dssiuiclient.hpp  ringbuffer.c  ringbuffer.h
src/components/: Makefile.am  Makefile.in  adsr.hpp  chebyshevshaper.hpp  dcblocker.hpp  delay.hpp  envelopegenerator.hpp  frequencytable.hpp  polyphonicmidinote.hpp  sineoscillator.hpp  slide.hpp  wavewrapper.hpp
src/sineshaper/: Makefile.am  Makefile.in  README.sineshaper  main.cpp  presetmanager.cpp  presetmanager.hpp  presets  sineshaper.cpp  sineshaper.glade  sineshaper.hpp  sineshaper.sh  sineshapergui.cpp  sineshapergui.hpp  sineshaperports.hpp  skindial_gtkmm.cpp  skindial_gtkmm.hpp
